--- a/lighthouse-core/lib/i18n/locales/te.json
+++ b/lighthouse-core/lib/i18n/locales/te.json
@@ -513,16 +513,16 @@
     "message": "JavaScriptను చిన్నదిగా చేయండి"
   },
   "lighthouse-core/audits/byte-efficiency/unused-css-rules.js | description": {
-    "message": "నెట్‌వర్క్ కార్యకలాపంలో ఉపయోగించబడే అనవసరమైన బైట్‌లను తగ్గించడం కోసం, స్టైల్‌షీట్‌ల నుండి గడువు ముగిసిన నియమాలను తీసివేయండి. అలాగే, మడత పైన ఉన్న కంటెంట్ కోసం ఉపయోగించని CSSను లోడ్ చేయకుండా ఆపివేయండి. [మరింత తెలుసుకోండి](https://web.dev/unused-css-rules/)."
+    "message": "నెట్‌వర్క్ యాక్టివిటీలో ఉపయోగించబడే బైట్‌లను తగ్గించడం కోసం, స్టైల్‌షీట్‌ల నుండి ఉపయోగించని నియమాలను తగ్గించండి. అలాగే, మడత పైన ఉన్న కంటెంట్ కోసం ఉపయోగించని CSSను మినహాయించండి. [మరింత తెలుసుకోండి](https://web.dev/unused-css-rules/)."
   },
   "lighthouse-core/audits/byte-efficiency/unused-css-rules.js | title": {
-    "message": "ఉపయోగించని CSS తీసివేయబడింది"
+    "message": "ఉపయోగించని CSS తగ్గించండి"
   },
   "lighthouse-core/audits/byte-efficiency/unused-javascript.js | description": {
-    "message": "నెట్‌వర్క్ కార్యకలాపం వినియోగించే బైట్‌లను తగ్గించడానికి ఉపయోగించని JavaScriptను తీసివేయండి. [మరింత తెలుసుకోండి](https://web.dev/unused-javascript/)."
+    "message": "ఉపయోగించని JavaScriptను తగ్గించండి, నెట్‌వర్క్ యాక్టివిటీ వినియోగించే బైట్‌లను అవసరం ఉన్నంత వరకు తగ్గించడానికి లోడింగ్ స్క్రిప్ట్‌లను మినహాయించండి. [మరింత తెలుసుకోండి](https://web.dev/unused-javascript/)."
   },
   "lighthouse-core/audits/byte-efficiency/unused-javascript.js | title": {
-    "message": "ఉపయోగించని JavaScriptను తీసివేయండి"
+    "message": "ఉపయోగించని JavaScriptను తగ్గించండి"
   },
   "lighthouse-core/audits/byte-efficiency/uses-long-cache-ttl.js | description": {
     "message": "దీర్ఘమైన కాష్ జీవితకాలం మీ పేజీకి పునరావృత సందర్శనలను వేగవంతం చేయవచ్చు. [మరింత తెలుసుకోండి](https://web.dev/uses-long-cache-ttl/)."
@@ -1725,7 +1725,7 @@
     "message": "CSP2 నుండి reflected-xss విస్మరించబడింది. దయచేసి, బదులుగా X-XSS-Protection హెడర్‌ను ఉపయోగించండి."
   },
   "lighthouse-core/lib/csp-evaluator.js | missingBaseUri": {
-    "message": "Missing base-uri allows injected <base> tags to set the base URL for all relative URLs (e.g. scripts) to an attacker controlled domain. Consider setting base-uri to 'none' or 'self'."
+    "message": "దాడి చేసే వారి ద్వారా కంట్రోల్ చేయబడే డొమైన్‌కు అన్ని సంబంధిత URLల (ఉదా. స్క్రిప్ట్‌లు) కోసం బేస్ URLను సెట్ చేయడానికి, పంపబడిన <base> ట్యాగ్‌లను మిస్ అయిన base-uri అనుమతిస్తుంది. base-uriని 'none' లేదా 'self'కు సెట్ చేయడాన్ని పరిగణించండి."
   },
   "lighthouse-core/lib/csp-evaluator.js | missingObjectSrc": {
     "message": "object-src ద్వారా కంట్రోల్ చేయబడే మూలకాలను లెగసీ ఫీచర్‌లుగా పరిగణిస్తారు. సురక్షితంకాని స్క్రిప్ట్‌లను అమలు చేసే ప్లగ్ఇన్‌ల ఇంజక్షన్‌ను నిరోధించడానికి object-src ను 'none'కు సెట్ చేయడాన్ని పరిగణించండి."
